--- a/tr/modules/ROOT/pages/commands/3D_Komutları.adoc
+++ b/tr/modules/ROOT/pages/commands/3D_Komutları.adoc
@@ -1,4 +1,56 @@
-= 3D Komutları
-ifdef::env-github[:imagesdir: /tr/modules/ROOT/assets/images]
+= 3D Commands
+:page-en: commands/3D_Commands
+ifdef::env-github[:imagesdir: /en/modules/ROOT/assets/images]
 
-(no links: data missing)
+* xref:/commands/Angle.adoc[Açı]
+* xref:/commands/Circle.adoc[Çember]
+* xref:/commands/Circumference.adoc[Çevre]
+* xref:/commands/CircumcircularSector.adoc[ÇevrelÇemberDilimi]
+* xref:/commands/CircumcircularArc.adoc[ÇevrelÇemberYayı]
+* xref:/commands/CircularSector.adoc[ÇevrelDilim]
+* xref:/commands/CircularArc.adoc[ÇevrelYay]
+* xref:/commands/Polygon.adoc[Çokgen]
+* xref:/commands/Polyline.adoc[ÇokluDoğru]
+* xref:/commands/PerpendicularLine.adoc[DikDoğru]
+* xref:/commands/PerpendicularPlane.adoc[DikDüzlem]
+* xref:/commands/Line.adoc[Doğru]
+* xref:/commands/Segment.adoc[DoğruParçası]
+* xref:/commands/Plane.adoc[Düzlem]
+* xref:/commands/Net.adoc[DüzlemeAç]
+* xref:/commands/Dodecahedron.adoc[Dodecahedron]
+* xref:/commands/Ends.adoc[Ends]
+* xref:/commands/Curve.adoc[Eğri]
+* xref:/commands/Axes.adoc[Eksenler]
+* xref:/commands/Function.adoc[Fonksiyon]
+* xref:/commands/Volume.adoc[Hacim]
+* xref:/commands/Ray.adoc[Işın]
+* xref:/commands/Incircle.adoc[İçÇember]
+* xref:/commands/InteriorAngles.adoc[İçAçılar]
+* xref:/commands/Intersect.adoc[Kesiştir]
+* xref:/commands/IntersectConic.adoc[KesiştirKonik]
+* xref:/commands/IntersectPath.adoc[KesiştirYol]
+* xref:/commands/Side.adoc[Kenar]
+* xref:/commands/Vertex.adoc[Köşe]
+* xref:/commands/Cone.adoc[Koni]
+* xref:/commands/Cube.adoc[Küp]
+* xref:/commands/Sphere.adoc[Küre]
+* xref:/commands/Center.adoc[Merkez]
+* xref:/commands/Point.adoc[Nokta]
+* xref:/commands/PointIn.adoc[Noktaİçinde]
+* xref:/commands/PerpendicularBisector.adoc[OrtaDikme]
+* xref:/commands/Midpoint.adoc[OrtaNokta]
+* xref:/commands/Octahedron.adoc[Octahedron]
+* xref:/commands/Perimeter.adoc[Perimeter]
+* xref:/commands/PlaneBisector.adoc[PlaneBisector]
+* xref:/commands/Prism.adoc[Prizma]
+* xref:/commands/Pyramid.adoc[Piramit]
+* xref:/commands/Cylinder.adoc[Silindir]
+* xref:/commands/InfiniteCone.adoc[SonsuzKoni]
+* xref:/commands/InfiniteCylinder.adoc[SonsuzSilindir]
+* xref:/commands/Bottom.adoc[Taban]
+* xref:/commands/Top.adoc[Tavan]
+* xref:/commands/Tetrahedron.adoc[Tetrahedron]
+* xref:/commands/Distance.adoc[Uzaklık]
+* xref:/commands/Radius.adoc[Yarıçap]
+* xref:/commands/Height.adoc[Yükseklik]
+* xref:/commands/Surface.adoc[Yüzey]
